FIX a few small issues noticed during translation

--- a/docs/de-de/modules/daten/pages/elasticSync-wareneingang.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-wareneingang.adoc
@@ -82,7 +82,7 @@ Gib die Lagerort-ID in deine CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#1500[Waren » Wareneingänge » [Suche ausführen\] » [Wareneingang wählen\] » Tab: Artikel].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#1500[Waren » Wareneingänge » [Wareneingang öffnen\] » Tab: Artikel].
 
 '''
 
@@ -95,7 +95,7 @@ Gib den Einkaufspreis in deine CSV-Datei ein. Der Einkaufspreis bezieht sich auf
 
 *_Zulässige Importwerte_*: Numerisch; verwende die gleiche Dezimalschreibweise wie in den xref:daten:ElasticSync.adoc#1300[Importoptionen].
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:warenbestaende-verwalten.adoc#intable-ek[Waren » Wareneingänge » [Suche ausführen\] » [Wareneingang wählen\] » Tab: Artikel].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:warenbestaende-verwalten.adoc#intable-ek[Waren » Wareneingänge » [Wareneingang öffnen\] » Tab: Artikel].
 
 '''
 
@@ -110,7 +110,7 @@ Gib die Lager-ID in deine CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#1500[Waren » Wareneingänge » [Suche ausführen\] » [Wareneingang wählen\] » Tab: Artikel].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#1500[Waren » Wareneingänge » [Wareneingang öffnen\] » Tab: Artikel].
 
 '''
 
@@ -149,7 +149,7 @@ Gib das Mindesthaltbarkeitsdatum der Ware in deine CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Datum im Format tt.mm.jjjj
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:mhd-charge-verwalten.adoc#100[Waren » Wareneingänge » [Suche ausführen\] » [Wareneingang wählen\] » Tab: Artikel].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:mhd-charge-verwalten.adoc#100[Waren » Wareneingänge » [Wareneingang öffnen\] » Tab: Artikel].
 
 '''
 
@@ -162,7 +162,7 @@ Gib die Charge in deine CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:mhd-charge-verwalten.adoc#100[Waren » Wareneingänge » [Suche ausführen\] » [Wareneingang wählen\] » Tab: Artikel].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:mhd-charge-verwalten.adoc#100[Waren » Wareneingänge » [Wareneingang öffnen\] » Tab: Artikel].
 
 '''
 
