--- a/docs/de-de/modules/daten/pages/elasticSync-eigenschaften-auswahlwerte.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-eigenschaften-auswahlwerte.adoc
@@ -123,7 +123,7 @@ Gib eine Positionsnummer in die CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen] » Werte]
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen\] » Werte]
 
 '''
 [#330]
@@ -139,7 +139,7 @@ Verwende zusätzlich das Feld xref:daten:elasticSync-eigenschaften-auswahlwerte.
 
 *_Zulässige Importwerte_*: Alphanumerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen] » Werte]
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen\] » Werte]
 
 '''
 [#340]
@@ -160,7 +160,7 @@ Möchtest du den Auswahlwert löschen?
 |Auswahlwert wird gelöscht.
 |===
 
-Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen] » Werte]
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen\] » Werte]
 
 '''
 [#400]
@@ -198,7 +198,7 @@ Füge das Feld einmal pro Sprache hinzu.
 [TIP]
 Stelle mithilfe der Dropdown-Liste auch die Sprache ein.
 
-Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen] » Werte]
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen\] » Werte]
 
 '''
 [#430]
@@ -214,7 +214,7 @@ Wenn du die Beschreibung in mehreren Sprachen speichern willst, dann füge das F
 [TIP]
 Stelle mithilfe der Dropdown-Liste auch die Sprache ein.
 
-Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen] » Werte]
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:eigenschaften.adoc#700[Einrichtung » Einstellungen » Eigenschaften » Konfiguration » [Eigenschaft öffnen\] » Werte]
 
 '''
 [#440]
