--- a/docs/en-gb/modules/data/pages/elasticSync-incoming-items.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-incoming-items.adoc
@@ -67,7 +67,7 @@ Enter the stock into your CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu xref:stock-management:managing-stocks.adoc#100[Stock » Stocks » [Open variation\] » tab: Stock » tab: Stock].
+You can find the result of the import in the back end menu xref:stock-management:managing-stocks.adoc#100[Stock » Stocks » [Open variation\] » Tab: Stock » Tab: Stock].
 
 '''
 
@@ -82,7 +82,7 @@ Enter the storage location ID into your CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu xref:stock-management:setting-up-a-warehouse.adoc#1500[Stock » Incoming items » [perform search] » [select incoming items data record] » tab: Item].
+You can find the result of the import in the back end menu xref:stock-management:setting-up-a-warehouse.adoc#1500[Stock » Incoming items » [Open incoming items data record\] » Tab: Item].
 
 '''
 
@@ -95,7 +95,7 @@ Enter the purchase price into your CSV file. The purchase price refers to the ne
 
 *_Permitted import values_*: Numeric; use the same decimal notation as in the xref:data:ElasticSync.adoc#1300[import options].
 
-You can find the result of the import in the back end menu xref:stock-management:managing-stocks.adoc#intable-purchase-price[Stock » Incoming items » [perform search] » [select incoming items data record] » tab: Item].
+You can find the result of the import in the back end menu xref:stock-management:managing-stocks.adoc#intable-purchase-price[Stock » Incoming items » [Open incoming items data record\] » Tab: Item].
 
 '''
 
@@ -110,7 +110,7 @@ Enter the warehouse ID into your CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu xref:stock-management:setting-up-a-warehouse.adoc#1500[Stock » Incoming items » [perform search] » [select incoming items data record] » tab: Item].
+You can find the result of the import in the back end menu xref:stock-management:setting-up-a-warehouse.adoc#1500[Stock » Incoming items » [Open incoming items data record\] » Tab: Item].
 
 '''
 
@@ -136,7 +136,7 @@ Enter the currency into your CSV file.
 
 *_Permitted import values_*: Alphanumeric (internal ID)
 
-You can find the result of the import in the back end menu xref:payment:currencies.adoc#10[Stock » Stocks » [Open variation\] » tab: Stock » tab: Incoming items].
+You can find the result of the import in the back end menu xref:payment:currencies.adoc#10[Stock » Stocks » [Open variation\] » Tab: Stock » Tab: Incoming items].
 
 '''
 
@@ -149,7 +149,7 @@ Enter the best before date of the item into your CSV file.
 
 *_Permitted import values_*: Date in the format dd.mm.yyyy
 
-You can find the result of the import in the back end menu xref:stock-management:managing-bbd-batch.adoc#100[Stock » Incoming items » [perform search] » [select incoming items data record] » tab: Item].
+You can find the result of the import in the back end menu xref:stock-management:managing-bbd-batch.adoc#100[Stock » Incoming items » [Open incoming items data record\] » Tab: Item].
 
 '''
 
@@ -162,7 +162,7 @@ Enter the batch into your CSV file.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu xref:stock-management:managing-bbd-batch.adoc#100[Stock » Incoming items » [perform search] » [select incoming items data record] » tab: Item].
+You can find the result of the import in the back end menu xref:stock-management:managing-bbd-batch.adoc#100[Stock » Incoming items » [Open incoming items data record\] » Tab: Item].
 
 '''
 
@@ -199,7 +199,7 @@ Enter the reason for incoming items.
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu *Item » Edit item » [open item] » tab: Stock » tab: Item movement*.
+You can find the result of the import in the back end menu *Item » Edit item » [Open item] » Tab: Stock » Tab: Item movement*.
 
 [[table-mapping-reason-incoming-items]]
 [cols="1,3"]
