--- a/docs/en-gb/modules/data/pages/elasticSync-warehouse.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-warehouse.adoc
@@ -69,7 +69,7 @@ Enter the storage location ID in your CSV file. This only applies to existing st
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#1500[Setup » Stock » Warehouse » [select warehouse] » Storage locations].
+You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#1500[Setup » Stock » Warehouse » [Select warehouse\] » Storage locations].
 
 '''
 
@@ -129,7 +129,7 @@ What is the purpose of the storage location?
 |Box (for xref:app:mobile-box-picking.adoc#[mobile box picking])
 |====
 
-You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#intable-purpose[Setup » Stock » Warehouse » [select warehouse] » Storage locations].
+You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#intable-purpose[Setup » Stock » Warehouse » [Select warehouse\] » Storage locations].
 
 '''
 
@@ -161,7 +161,7 @@ What is the status of the storage location?
 |Reserved
 |====
 
-You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#intable-status[Setup » Stock » Warehouse » [select warehouse] » Storage locations].
+You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#intable-status[Setup » Stock » Warehouse » [Select warehouse\] » Storage locations].
 
 '''
 
@@ -174,7 +174,7 @@ Enter the position of the storage location in your CSV file. A pick list with op
 
 *_Permitted import values_*: Numeric
 
-You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#100[Setup » Stock » Warehouse » [select warehouse] » Storage locations].
+You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#100[Setup » Stock » Warehouse » [Select warehouse\] » Storage locations].
 
 '''
 
@@ -206,7 +206,7 @@ Enter the storage location type according to the size of the variation into your
 |Euro pallet
 |====
 
-You can find the result of the import in the back end menu: xref:stock-management:new-incoming-items.adoc#intable-storage-location-type[Item » Edit item » [Open item\] » Tab: ID of a variation » Tab: Warehouse » column: Storage location type].
+You can find the result of the import in the back end menu: xref:stock-management:new-incoming-items.adoc#intable-storage-location-type[Item » Edit item » [Open item\] » Tab: ID of a variation » Tab: Warehouse » Column: Storage location type].
 
 '''
 
@@ -219,7 +219,7 @@ Enter notes about the storage location into your CSV file.
 
 *_Permitted import values_*: Alphanumeric
 
-You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#intable-notes[Setup » Stock » Warehouse » [select warehouse] » Storage locations » [select storage location]].
+You can find the result of the import in the back end menu: xref:stock-management:setting-up-a-warehouse.adoc#intable-notes[Setup » Stock » Warehouse » [Select warehouse\] » Storage locations » [Select storage location\]].
 
 '''
 
