ADD code example subject line to EmailBuilder

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -2036,3 +2036,13 @@ Das Code-Beispiel findest du link:https://raw.githubusercontent.com/plentymarket
 Füge in das <<#intable-widget-code, Code-Widget>> einen Code ein, der bewirkt, dass die Auftragspositionen mit den Varianten-IDs, den Artikelnamen, der Artikelanzahl und dem Preis in einer Tabelle angezeigt werden.
 
 Das Code-Beispiel findest du link:https://raw.githubusercontent.com/plentymarkets/manual/master/de/crm/assets/emailbuilder-code-beispiel-auftragspositionen.txt[unter diesem Link^].
+
+[#code-beispiele-betreff]
+== Code-Beispiele für den Betreff
+
+Füge in den Betreff deiner Vorlage einen Code ein, der bewirkt, dass ein bestimmtes Wort am Anfang des Betreffs angezeigt wird, wenn es sich um bestimmte Auftragsherkünfte handelt. In unserem Beispiel wird immer der Begriff `[WICHTIG]` am Anfang des Betreffs eingefügt, wenn die Herkünfte zwischen `9` und `11` liegen.
+
+{% if order.formattedReferrer.id >= 9 and order.formattedReferrer.id <= 11 %}
+[WICHTIG]
+{% endif %}
+Ihr Auftrag {{order.id}} wurde versandt
