--- a/docs/de-de/modules/daten/pages/import-introduction.adoc
+++ b/docs/de-de/modules/daten/pages/import-introduction.adoc
@@ -27,7 +27,7 @@ Importe erstellst, bearbeitest und verwaltest du im Menü *Daten » Import*.
 
 *Datenquelle/Quelle* = Der Begriff "Quelle" hat zwei Bedeutungen im Import-Tool:
 
-. Die Importdatei. Diese Datei kannst du manuell hochladen. Du kannst aber auch einen Speicherort für die Datei angeben. Du kannst Dateien nutzen, die per HTTPS, FTP oder SFTP erreichbar sind. Für solche Dateien kannst du ein Importintervall festlegen. Die Dateien werden also automatisch immer wieder importiert.
+. Die Importdatei. Diese Datei kannst du manuell hochladen. Du kannst aber auch einen HTTPS-Speicherort für die Datei angeben. Für solche Dateien kannst du ein Importintervall festlegen. Die Dateien werden also automatisch immer wieder importiert.
 . Eine Spalte einer CSV-Datei. Jede Spalte ist also eine Quelle. TXT-Dateien sind zwar anders aufgebaut. Aber auch hier ist es am einfachsten, sich die darin enthaltenen Daten als Spalten vorzustellen.
 
 *Abgleich* = Mit dem Abgleich bestimmst du, anhand welcher Daten versucht wird zu identifizieren, ob es den zu importierenden Datensatz in plentymarkets schon gibt oder nicht.
