--- a/docs/de-de/modules/app/partials/hardware-wawi.adoc
+++ b/docs/de-de/modules/app/partials/hardware-wawi.adoc
@@ -8,7 +8,7 @@ Wenn du die plentymarkets App für die Warenwirtschaft im Lager nutzen möchtest
 
 |M3 SM10 Mobile Computer +
 (Android 5.1)
-|link:https://www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE[www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE^] +
+|link:https://www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE[Angebot bei SundS ITS ansehen^] +
 
 SundS ITS +
 Beselerstr. 2-6 +
