--- a/docs/en-gb/modules/app/partials/hardware-mobile-inventory.adoc
+++ b/docs/en-gb/modules/app/partials/hardware-mobile-inventory.adoc
@@ -8,7 +8,7 @@ If you want to use the plentymarkets app for managing the stock of your warehous
 
 |M3 SM10 Mobile Computer +
 (Android 5.1)
-|link:https://www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE[www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE^] +
+|link:https://www.sundsits.de/M3SM10-Mobile-Computer-WiFi-und-LTE[View SundS ITS offer^] +
 
 SundS ITS +
 Beselerstr. 2-6 +
