--- a/docs/en-gb/modules/app/partials/hardware-plentywarehouse.adoc
+++ b/docs/en-gb/modules/app/partials/hardware-plentywarehouse.adoc
@@ -8,7 +8,7 @@ If you want to use the plentyWarehouse app to manage your stock and complete tas
 
 |M3 SM15 Mobile Computer +
 (Android 7.1)
-|link:https://sys.sundsits.de/M3-SM15-Mobile-Computer-WiFi-und-LTE[] +
+|link:https://sys.sundsits.de/M3-SM15-Mobile-Computer-WiFi-und-LTE[View SundS ITS offer^] +
 
 SundS ITS +
 Beselerstr. 2-6 +
@@ -20,7 +20,7 @@ link:https://www.sundsits.de[www.sundsits.de^]
 
 |Zebra TC 21 +
 (Android 11)
-|link:https://sys.sundsits.de/Zebra-TC21[] +
+|link:https://sys.sundsits.de/Zebra-TC21[View SundS ITS offer^] +
 
 SundS ITS +
 Beselerstr. 2-6 +
@@ -32,7 +32,7 @@ link:https://www.sundsits.de[www.sundsits.de^]
 
 |Zebra TC 26 +
 (Android 11)
-|link:https://sys.sundsits.de/Zebra-TC26[] +
+|link:https://sys.sundsits.de/Zebra-TC26[View SundS ITS offer^] +
 
 SundS ITS +
 Beselerstr. 2-6 +
