--- a/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
+++ b/docs/en-gb/modules/stock-management/pages/installation-and-initial-setup.adoc
@@ -6,7 +6,7 @@
 :docinfodir: /workspace/manual-adoc
 :docinfo1:
 
-Are you already convinced of the advantages of the xref:stock-management:plentywarehouse.adoc#[plentyWarehouse app (beta)]? Then do not lose any time and start setting up the plentyWarehouse app on the appropriate devices.
+Are you already convinced of the advantages of the xref:stock-management:plentywarehouse.adoc#[plentyWarehouse app (Beta)]? Then do not lose any time and start setting up the plentyWarehouse app on the appropriate devices.
 
 On this page you will learn how to install plentyWarehouse, how to find your way around after the first login and how to carry out general settings.
 
@@ -92,9 +92,6 @@ a|This area contains tiles with symbols that represent the individual functions 
 * image:stock-management:icon_reshelving.png[width=24, height=24]) xref:stock-management:reshelving-items.adoc#[Reshelving items]
 
 * image:stock-management:icon_stocktaking.png[width=24, height=24]) xref:stock-management:carrying-out-stocktaking.adoc#[Stocktaking]
-
-* image:stock-management:icon_pick-lists.png[width=24, height=24]
-xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
 
 * image:stock-management:icon_pick-lists.png[width=24, height=24]
 xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
