--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -6,7 +6,7 @@
 :docinfodir: /workspace/manual-adoc
 :docinfo1:
 
-Bist du bereits von den Vorteilen der xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App (beta)] überzeugt? Dann verliere keine Zeit und richte jetzt die plentyWarehouse App auf dem passenden Gerät ein.
+Bist du bereits von den Vorteilen der xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App (Beta)] überzeugt? Dann verliere keine Zeit und richte jetzt die plentyWarehouse App auf dem passenden Gerät ein.
 
 Auf dieser Seite erfährst du, wie du plentyWarehouse installierst, wie du dich beim ersten Login zurechtfindest und allgemeine Einstellungen vornimmst.
 
@@ -81,7 +81,7 @@ Du kannst die Bereiche des Dashboards in beliebiger Reihenfolge untereinander an
 
 | *Funktionen* 
 |icon:apps[set=material]
-a|Dieser Bereich enthält Kacheln mit Symbolen für die einzelnen Funktionen von plentyWarehouse. +
+a|Dieser Bereich enthält Kacheln. Jede Kachel steht für eine Funktion von plentyWarehouse.
 
 * icon:search[role="darkGrey"] xref:warenwirtschaft:artikel-und-lagerorte.adoc#100[Artikelsuche]
 
@@ -92,9 +92,6 @@ a|Dieser Bereich enthält Kacheln mit Symbolen für die einzelnen Funktionen von
 * image:warenwirtschaft:icon_reshelving.png[width=24, height=24] xref:warenwirtschaft:artikel-verraeumen.adoc#[Verräumen]
 
 * image:warenwirtschaft:icon_stocktaking.png[width=24, height=24] xref:warenwirtschaft:inventur-durchfuehren.adoc#[Inventur]
-
-* image:warenwirtschaft:icon_pick-lists.png[width=24, height=24] 
-xref:warenwirtschaft:mobile-picklisten.adoc#[Mit Picklisten arbeiten]
 
 * image:warenwirtschaft:icon_pick-lists.png[width=24, height=24] 
 xref:warenwirtschaft:mobile-picklisten.adoc#[Mit Picklisten arbeiten]
