--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -352,10 +352,10 @@ include::partial$neues-dashboard-element.adoc[]
 a| Möchtest du die Kachel in einer bestimmten Farbe anzeigen? Wähle dazu die Option *Anzeigen* und klicke auf (icon:settings[set=material]). Es öffnet sich ein weiteres Einstellungsfenster. Wähle links die Farbe für die Kachel aus. Soll die Farbe der Kachel sich je nach Wert der Kennzahl ändern, wähle zusätzlich einen *Operator* und einen *Vergleichswert* aus, bevor du auf *Speichern* klickst. +
 *_Optional:_* Gib im Feld *Link* eine URL ein. Trifft die eingestellte Bedingung zu, wird diese URL beim Klick auf die Kachel geöffnet. Du kannst zwei Typen von Links angeben: +
 
-* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil *terra* in der URL des zu öffnenden Menüs angegeben ist. +
-*_Beispiel:_* Soll durch Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link */order/order-search ein*. +
+* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil `terra` in der URL des zu öffnenden Menüs angegeben ist. +
+*_Beispiel:_* Soll durch Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link `/order/order-search` ein. +
 
-* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit *http://*. +
+* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit `http://`. +
 *_Tipp:_* Klicke auf (icon:plus[role="green"]), um weitere Bedingungen für die Einfärbung zu speichern.
 
 | *Individuelle Shortcuts*
@@ -464,13 +464,13 @@ Einstellungen für Zeilen vornehmen:
 | Wähle, ob die Einheit der Kennzahl in der Zeile angezeigt werden soll.
 
 | *Bedingte Einfärbung*
-| Möchtest du die Zeile in einer bestimmten Farbe anzeigen? Wähle dazu die Option *Anzeigen* und klicke auf (icon:settings[set=material]). Es öffnet sich ein weiteres Einstellungsfenster. Wähle links die Farbe für die Zeile aus. Soll die Farbe der Zeile sich je nach Wert der Kennzahl ändern, wähle zusätzlich einen *Operator* und einen *Vergleichswert* aus, bevor du auf *Speichern* klickst. +
+a| Möchtest du die Zeile in einer bestimmten Farbe anzeigen? Wähle dazu die Option *Anzeigen* und klicke auf (icon:settings[set=material]). Es öffnet sich ein weiteres Einstellungsfenster. Wähle links die Farbe für die Zeile aus. Soll die Farbe der Zeile sich je nach Wert der Kennzahl ändern, wähle zusätzlich einen *Operator* und einen *Vergleichswert* aus, bevor du auf *Speichern* klickst. +
 *_Optional:_* Gib im Feld *Link* eine URL ein. Trifft die eingestellte Bedingung zu, wird diese URL beim Klick auf die Zeile geöffnet. Du kannst zwei Typen von Links angeben: +
 
-* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil *terra* in der URL des zu öffnenden Menüs angegeben ist. +
-*_Beispiel:_* Soll durch Klick auf die Zeile die Auftragsübersicht geöffnet werden, gib den Link */order/order-search ein*. +
+* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil `terra` in der URL des zu öffnenden Menüs angegeben ist. +
+*_Beispiel:_* Soll durch Klick auf die Zeile die Auftragsübersicht geöffnet werden, gib den Link `/order/order-search` ein. +
 
-* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit *http://*. +
+* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit `http://`. +
 *_Tipp:_* Klicke auf (icon:plus[role="green"]), um weitere Bedingungen für die Einfärbung zu speichern.
 
 | *Individuelle Shortcuts*
@@ -1275,10 +1275,10 @@ Individuelle Schaltflächen hinzufügen:
 | *Link*
 a|Gib einen Link ein, der beim Klick auf die Schaltfläche geöffnet werden soll. Dazu hast du 2 Möglichkeiten: +
 
-* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil *terra* in der URL des zu öffnenden Menüs angegeben ist. + 
-*_Beispiele:_* Soll per Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link */order/order-search ein*. Soll per Klick auf den Button ein Prozess gestartet werden? Dann gib den Link */processes/execution/prozess-id* ein. Setze für *prozess-id* die ID des Prozesses ein, der gestartet werden soll. +
+* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil `terra` in der URL des zu öffnenden Menüs angegeben ist. + 
+*_Beispiele:_* Soll per Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link `/order/order-search` ein. Soll per Klick auf den Button ein Prozess gestartet werden? Dann gib den Link `/processes/execution/prozess-id` ein. Setze für `prozess-id` die ID des Prozesses ein, der gestartet werden soll. +
 
-* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit *http://* oder *https://*.
+* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit `http://` oder `https://`.
 
 | *Dashboard öffnen*
 | Wähle aus der Dropdown-Liste eine Dashboard-Ansicht aus, die beim Klick auf die Schaltfläche geöffnet werden soll. +
