Denise/bi includes (#609)
* fix include structure DE + EN

* add include for editing mode

* change position of chapter

* add translation and fix/change formatting

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -168,54 +168,6 @@ Grundsätzlich legst du auf einem neuen Dashboard zuerst verschiedene Bereiche a
 Zum besseren Verständnis empfehlen wir dir unser Video-Tutorial, in dem die erstmalige Bearbeitung des Dashboards Schritt für Schritt erklärt wird. link:https://www.youtube.com/watch?v=oAm9CK-aNWU[Zum Video geht es hier entlang!^]
 ====
 
-[#405]
-=== Verfügbare Funktionen im Bearbeitungsmodus
-
-Das Dashboard erlaubt dir viel Flexibilität beim Anordnen von Inhalten und Daten. Grundsätzlich platzierst du Darstellungsbereiche und Elemente intuitiv per Drag-and-Drop auf dem Dashboard. Jeder Bereich und jedes Element kann per Klick auf (icon:design_inline_edit[set=plenty]) weiter bearbeitet werden. <<table-dashboard-editing-mode>> beschreibt die Funktionen, die im Bearbeitungsmodus der Dashboard-Ansicht oben rechts im Menü *plentymarkets Logo (Start) » Dashboard* zur Verfügung stehen.
-
-
-[IMPORTANT]
-.Funktion nur für Admins verfügbar
-====
-Der Bearbeitungmodus steht nur Benutzer:innen vom Typ *Admin* zur Verfügung. Benutzer:innen vom Typ *Backend* können über den Bearbeitungsmodus keine Änderungen an der Dashboard-Ansicht vornehmen.
-====
-
-[[table-dashboard-editing-mode]]
-.Verfügbare Funktionen im Bearbeitungsmodus
-[cols="2,1,6"]
-|====
-|Bedienelement |Symbol |Erläuterung
-
-| *Ansicht bearbeiten* 
-|icon:design_inline_edit[set=plenty]
-| Öffnet die Dashboard-Ansicht zur Bearbeitung.
-
-| *Rückgängig* 
-|icon:reply[role=darkGrey]
-| Macht die letzte Änderung rückgängig, soweit die betreffende Änderung noch nicht gespeichert wurde.
-
-| *Wiederherstellen* 
-|icon:share[role=darkGrey]
-| Stellt eine rückgängig gemachte Änderung wieder her.
-
-| *[Name der Dashboard-Ansicht]* (Tab)
-|
-| Dieser Bereich zeigt an, welche Dashboard-Ansicht aktuell geöffnet ist. Klicke auf (icon:sort-down[role=darkGrey]), um zu einer anderen Dashboard-Ansicht zu wechseln oder eine <<#407, neue Ansicht>> zu erstellen.
-
-| *Letzten Speicherpunkt wiederherstellen* 
-|icon:reset[set=plenty]
-| Setzt die Dashboard-Ansicht auf den Stand zurück, der beim letzten Speichern vorhanden war.
-
-| *Speichern* 
-|icon:save[set=plenty]
-| Speichert die Änderungen, die an der Dashboard-Ansicht vorgenommenen wurden.
-
-| *Schließen* 
-|icon:close[set=plenty]
-| Beendet den Bearbeitungsmodus. Falls nicht gespeicherte Änderungen vorhanden sind, wird eine Sicherheitsabfrage angezeigt.
-
-|====
-
 [#407]
 === Neue Dashboard-Ansicht erstellen
 
@@ -240,6 +192,16 @@ Neue Dashboard-Ansicht erstellen:
 → Die neue Ansicht wird gespeichert.
 
 Pro Dashboard-Ansicht kannst zu entscheiden, ob nur bestimmte Benutzer:innen oder Benutzerrollen darauf zugreifen können. Weitere Informationen dazu findest du im folgenden Kapitel.
+
+[#405]
+=== Bearbeitungsmodus nutzen
+
+Darstellungsbereiche und Elemente kannst du intuitiv per Drag-and-Drop auf dem Dashboard platzieren. Nutze den Bearbeitungsmodus (icon:design_inline_edit[set=plenty]), um Bereiche und Elemente weiter anzupassen oder bei Bedarf Änderungen rückgängig zu machen.
+
+:menu-path: pass:quotes[*plentymarkets Logo (Start) » Dashboard*]
+:edit-object: Inhalte eines Dashboards
+
+include::_includes:page$myview-editing-mode.adoc[]
 
 [#408]
 === Rechte für Dashboard-Ansichten vergeben
@@ -390,10 +352,10 @@ include::partial$neues-dashboard-element.adoc[]
 a| Möchtest du die Kachel in einer bestimmten Farbe anzeigen? Wähle dazu die Option *Anzeigen* und klicke auf (icon:settings[set=material]). Es öffnet sich ein weiteres Einstellungsfenster. Wähle links die Farbe für die Kachel aus. Soll die Farbe der Kachel sich je nach Wert der Kennzahl ändern, wähle zusätzlich einen *Operator* und einen *Vergleichswert* aus, bevor du auf *Speichern* klickst. +
 *_Optional:_* Gib im Feld *Link* eine URL ein. Trifft die eingestellte Bedingung zu, wird diese URL beim Klick auf die Kachel geöffnet. Du kannst zwei Typen von Links angeben: +
 
-* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil *terra* in der URL des zu öffnenden Menüs angegeben ist. +
-*_Beispiel:_* Soll durch Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link */order/order-search ein*. +
+* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil `terra` in der URL des zu öffnenden Menüs angegeben ist. +
+*_Beispiel:_* Soll durch Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link `/order/order-search` ein. +
 
-* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit *http://*. +
+* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit `http://`. +
 *_Tipp:_* Klicke auf (icon:plus[role="green"]), um weitere Bedingungen für die Einfärbung zu speichern.
 
 | *Individuelle Shortcuts*
@@ -502,13 +464,13 @@ Einstellungen für Zeilen vornehmen:
 | Wähle, ob die Einheit der Kennzahl in der Zeile angezeigt werden soll.
 
 | *Bedingte Einfärbung*
-| Möchtest du die Zeile in einer bestimmten Farbe anzeigen? Wähle dazu die Option *Anzeigen* und klicke auf (icon:settings[set=material]). Es öffnet sich ein weiteres Einstellungsfenster. Wähle links die Farbe für die Zeile aus. Soll die Farbe der Zeile sich je nach Wert der Kennzahl ändern, wähle zusätzlich einen *Operator* und einen *Vergleichswert* aus, bevor du auf *Speichern* klickst. +
+a| Möchtest du die Zeile in einer bestimmten Farbe anzeigen? Wähle dazu die Option *Anzeigen* und klicke auf (icon:settings[set=material]). Es öffnet sich ein weiteres Einstellungsfenster. Wähle links die Farbe für die Zeile aus. Soll die Farbe der Zeile sich je nach Wert der Kennzahl ändern, wähle zusätzlich einen *Operator* und einen *Vergleichswert* aus, bevor du auf *Speichern* klickst. +
 *_Optional:_* Gib im Feld *Link* eine URL ein. Trifft die eingestellte Bedingung zu, wird diese URL beim Klick auf die Zeile geöffnet. Du kannst zwei Typen von Links angeben: +
 
-* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil *terra* in der URL des zu öffnenden Menüs angegeben ist. +
-*_Beispiel:_* Soll durch Klick auf die Zeile die Auftragsübersicht geöffnet werden, gib den Link */order/order-search ein*. +
+* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil `terra` in der URL des zu öffnenden Menüs angegeben ist. +
+*_Beispiel:_* Soll durch Klick auf die Zeile die Auftragsübersicht geöffnet werden, gib den Link `/order/order-search` ein. +
 
-* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit *http://*. +
+* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit `http://`. +
 *_Tipp:_* Klicke auf (icon:plus[role="green"]), um weitere Bedingungen für die Einfärbung zu speichern.
 
 | *Individuelle Shortcuts*
@@ -1313,10 +1275,10 @@ Individuelle Schaltflächen hinzufügen:
 | *Link*
 a|Gib einen Link ein, der beim Klick auf die Schaltfläche geöffnet werden soll. Dazu hast du 2 Möglichkeiten: +
 
-* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil *terra* in der URL des zu öffnenden Menüs angegeben ist. + 
-*_Beispiele:_* Soll per Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link */order/order-search ein*. Soll per Klick auf den Button ein Prozess gestartet werden? Dann gib den Link */processes/execution/prozess-id* ein. Setze für *prozess-id* die ID des Prozesses ein, der gestartet werden soll. +
+* Interner Link: Ein interner Link öffnet ein Menü innerhalb des plentymarkets Backends. Gib dabei die URL des zu öffnenden Menüs beginnend mit einem */* ein. Der Link muss alles beinhalten, was nach dem Bestandteil `terra` in der URL des zu öffnenden Menüs angegeben ist. + 
+*_Beispiele:_* Soll per Klick auf den Button die Auftragsübersicht geöffnet werden, gib den Link `/order/order-search` ein. Soll per Klick auf den Button ein Prozess gestartet werden? Dann gib den Link `/processes/execution/prozess-id` ein. Setze für `prozess-id` die ID des Prozesses ein, der gestartet werden soll. +
 
-* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit *http://* oder *https://*.
+* Externer Link: Gib den vollständigen Link zur externen Seite ein, beginnend mit `http://` oder `https://`.
 
 | *Dashboard öffnen*
 | Wähle aus der Dropdown-Liste eine Dashboard-Ansicht aus, die beim Klick auf die Schaltfläche geöffnet werden soll. +
