fix wording and formatting for rights

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -206,7 +206,7 @@ include::_includes:page$myview-editing-mode.adoc[]
 [#408]
 === Rechte für Dashboard-Ansichten vergeben
 
-Überlege dir, welche Benutzer:innen die Standardansicht sehen dürfen. Auch den Zugriff auf weitere Ansichten kannst du pro Benutzer:in oder Rolle einschränken oder erlauben. Beachte, dass Benutzer:innen oder Rollen trotz diesem Zugriff keine Dashboard-Ansichten bearbeiten und auch keine neuen Ansichten anlegen können.
+Überlege dir, welche Benutzer:innen die Standardansicht sehen dürfen. Auch den Zugriff auf weitere Ansichten kannst du pro Benutzer:in oder Rolle einschränken oder erlauben. Beachte, dass Benutzer:innen vom Typ *Backend* trotz dieser Freigabe keine Dashboard-Ansichten bearbeiten und auch keine neuen Ansichten anlegen können.
 
 Öffne bei einer bereits angelegten <<#407, Dashboard-Ansicht>> den Bearbeitungsmodus (icon:design_inline_edit[set=plenty]). Klicke auf die Schaltfläche *Rechteverwaltung*, um zu den Einstellungen für Benutzer:innen und Rollen zu gelangen und die Dashboard-Ansicht freizugeben.
 
