--- a/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/myview-dashboard.adoc
@@ -200,7 +200,7 @@ include::_includes:page$myview-editing-mode.adoc[]
 [#408]
 === Assigning rights for dashboard views
 
-Decide which users should see the default view.  You can also restrict or allow access for additional dashboard views per user or user role. Note that users or roles of the type Back end cannot edit dashboard views or create new views, even if they have been assigned those rights.
+Decide which users should see the default view.  You can also restrict or allow access for additional dashboard views per user or user role. Note that users of the type *Back end* cannot edit dashboard views or create new views even if they have been assigned those rights.
 
 Open the editing mode (icon:design_inline_edit[set=plenty]) for an already existing <<#407, dashboard view>>. Click on *Rights management* to access the settings for users and user roles and decide which dashboard view(s) should be visible for them.
 
