--- a/docs/de-de/modules/_includes/pages/myview-editing-mode.adoc
+++ b/docs/de-de/modules/_includes/pages/myview-editing-mode.adoc
@@ -8,7 +8,7 @@ Anwendungsfall für die spezielle myView händisch auf der Seite hinzufügen - W
 ////
 
 
-Der Bearbeitungsmodus bietet dir viel Flexibilität beim Anordnen von Inhalten und Daten im Menü *{menu-path}*. Grundsätzlich platzierst du Elemente intuitiv per Drag-and-drop. Du kannst jedes Element individuell anpassen und weiter bearbeiten. <<#table-functions-editing-mode>> enthält einen Überblick über die Funktionen, die im Bearbeitungsmodus zur Verfügung stehen.
+Der Bearbeitungsmodus bietet dir viel Flexibilität beim Anordnen von Inhalten und Daten im Menü {menu-path}. Grundsätzlich platzierst du Elemente intuitiv per Drag-and-drop. Du kannst jedes Element individuell anpassen und weiter bearbeiten. <<#table-functions-editing-mode>> enthält einen Überblick über die Funktionen, die im Bearbeitungsmodus zur Verfügung stehen.
 
 [TIP]
 .Hast du Admin-Rechte?
